--- a/src/messages.xlf
+++ b/src/messages.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
-  <file source-language="pt-br" datatype="plaintext" original="ng2.template">
+  <file source-language="en" datatype="plaintext" original="ng2.template">
     <body>
       <trans-unit id="ngb.alert.close" datatype="html">
         <source>Close</source>
@@ -278,6 +278,14 @@
           <context context-type="sourcefile">app/operation/sell-edit/sell-edit.component.html</context>
           <context context-type="linenumber">10</context>
         </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/learning/paper-buy-edit/paper-buy-edit.component.html</context>
+          <context context-type="linenumber">10</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/learning/paper-sell-edit/paper-sell-edit.component.html</context>
+          <context context-type="linenumber">10</context>
+        </context-group>
         <note priority="1" from="description">Price</note>
       </trans-unit>
       <trans-unit id="name" datatype="html">
@@ -418,6 +426,18 @@
           <context context-type="sourcefile">app/operation/sell-edit/sell-edit.component.html</context>
           <context context-type="linenumber">5</context>
         </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/learning/paper-buy-card/paper-buy-card.component.html</context>
+          <context context-type="linenumber">15</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/learning/paper-buy-edit/paper-buy-edit.component.html</context>
+          <context context-type="linenumber">5</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/learning/paper-sell-edit/paper-sell-edit.component.html</context>
+          <context context-type="linenumber">5</context>
+        </context-group>
         <note priority="1" from="description">Amount</note>
       </trans-unit>
       <trans-unit id="nickname" datatype="html">
@@ -440,6 +460,14 @@
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/operation/sell-edit/sell-edit.component.html</context>
+          <context context-type="linenumber">15</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/learning/paper-buy-edit/paper-buy-edit.component.html</context>
+          <context context-type="linenumber">26</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/learning/paper-sell-edit/paper-sell-edit.component.html</context>
           <context context-type="linenumber">15</context>
         </context-group>
         <note priority="1" from="description">Nickname</note>
@@ -570,6 +598,14 @@
           <context context-type="sourcefile">app/operation/sell-edit/sell-edit.component.html</context>
           <context context-type="linenumber">58</context>
         </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/learning/paper-buy-edit/paper-buy-edit.component.html</context>
+          <context context-type="linenumber">33</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/learning/paper-sell-edit/paper-sell-edit.component.html</context>
+          <context context-type="linenumber">45</context>
+        </context-group>
         <note priority="1" from="description">Archived</note>
       </trans-unit>
       <trans-unit id="buy" datatype="html">
@@ -611,6 +647,14 @@
           <context context-type="linenumber">3</context>
         </context-group>
         <note priority="1" from="description">Quick Paper Purchase</note>
+      </trans-unit>
+      <trans-unit id="ppBuyTip" datatype="html">
+        <source>Make a paper buy (A fake buy just for learning purposes)</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/learning/paper-quick-buy/paper-quick-buy.component.html</context>
+          <context context-type="linenumber">1</context>
+        </context-group>
+        <note priority="1" from="description">Ppbuy tip</note>
       </trans-unit>
       <trans-unit id="equity" datatype="html">
         <source>Equity: R$</source>
@@ -682,6 +726,10 @@
           <context context-type="sourcefile">app/menu/menu/menu.component.html</context>
           <context context-type="linenumber">9</context>
         </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/learning/learning/learning.component.html</context>
+          <context context-type="linenumber">4</context>
+        </context-group>
         <note priority="1" from="description">Purchases</note>
       </trans-unit>
       <trans-unit id="sales" datatype="html">
@@ -689,6 +737,10 @@
         <context-group purpose="location">
           <context context-type="sourcefile">app/menu/menu/menu.component.html</context>
           <context context-type="linenumber">10</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/learning/learning/learning.component.html</context>
+          <context context-type="linenumber">21</context>
         </context-group>
         <note priority="1" from="description">Sales</note>
       </trans-unit>
@@ -741,6 +793,62 @@
         </context-group>
         <note priority="1" from="description">Tip No Buys</note>
       </trans-unit>
+      <trans-unit id="clickForDetails" datatype="html">
+        <source>Click for details</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/operation/operations-center/operations-center.component.html</context>
+          <context context-type="linenumber">17</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/operation/operations-center/operations-center.component.html</context>
+          <context context-type="linenumber">34</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/operation/operations-center/operations-center.component.html</context>
+          <context context-type="linenumber">50</context>
+        </context-group>
+        <note priority="1" from="description">Click for details</note>
+      </trans-unit>
+      <trans-unit id="aBuyFrom " datatype="html">
+        <source>A buy from</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/operation/operations-center/operations-center.component.html</context>
+          <context context-type="linenumber">32</context>
+        </context-group>
+        <note priority="1" from="description">A Buy from</note>
+      </trans-unit>
+      <trans-unit id="gain" datatype="html">
+        <source>Gain</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/operation/operations-center/operations-center.component.html</context>
+          <context context-type="linenumber">34</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/operation/buy-card/buy-card.component.html</context>
+          <context context-type="linenumber">34</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/learning/paper-sell-card/paper-sell-card.component.html</context>
+          <context context-type="linenumber">18</context>
+        </context-group>
+        <note priority="1" from="description">Gain</note>
+      </trans-unit>
+      <trans-unit id="aSellFrom" datatype="html">
+        <source>A sell from</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/operation/operations-center/operations-center.component.html</context>
+          <context context-type="linenumber">49</context>
+        </context-group>
+        <note priority="1" from="description">A sell from</note>
+      </trans-unit>
+      <trans-unit id="emptyLearningMessage " datatype="html">
+        <source>You don&apos;t have bought anything. Start <x id="START_LINK" ctype="x-a" equiv-text="&lt;a&gt;"/>experimenting<x id="CLOSE_LINK" ctype="x-a" equiv-text="&lt;/a&gt;"/> and make a paper buy.</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/learning/learning/learning.component.html</context>
+          <context context-type="linenumber">5</context>
+        </context-group>
+        <note priority="1" from="description">Empty learning message</note>
+      </trans-unit>
       <trans-unit id="profitPrct" datatype="html">
         <source>Profit(%):</source>
         <context-group purpose="location">
@@ -792,6 +900,10 @@
         <context-group purpose="location">
           <context context-type="sourcefile">app/operation/experience-card/experience-card.component.html</context>
           <context context-type="linenumber">40</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/learning/paper-sell-edit/paper-sell-edit.component.html</context>
+          <context context-type="linenumber">31</context>
         </context-group>
         <note priority="1" from="description">Stop Loss</note>
       </trans-unit>
@@ -869,6 +981,14 @@
           <context context-type="sourcefile">app/operation/sell-edit/sell-edit.component.html</context>
           <context context-type="linenumber">33</context>
         </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/learning/paper-buy-edit/paper-buy-edit.component.html</context>
+          <context context-type="linenumber">16</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/learning/paper-sell-edit/paper-sell-edit.component.html</context>
+          <context context-type="linenumber">22</context>
+        </context-group>
         <note priority="1" from="description">Edit</note>
       </trans-unit>
       <trans-unit id="stopgain" datatype="html">
@@ -938,22 +1058,14 @@
           <context context-type="linenumber">31</context>
         </context-group>
         <context-group purpose="location">
+          <context context-type="sourcefile">app/learning/paper-buy-card/paper-buy-card.component.html</context>
+          <context context-type="linenumber">21</context>
+        </context-group>
+        <context-group purpose="location">
           <context context-type="sourcefile">app/learning/paper-sell-card/paper-sell-card.component.html</context>
           <context context-type="linenumber">24</context>
         </context-group>
         <note priority="1" from="description">stock Value</note>
-      </trans-unit>
-      <trans-unit id="gain" datatype="html">
-        <source>Gain:</source>
-        <context-group purpose="location">
-          <context context-type="sourcefile">app/operation/buy-card/buy-card.component.html</context>
-          <context context-type="linenumber">34</context>
-        </context-group>
-        <context-group purpose="location">
-          <context context-type="sourcefile">app/learning/paper-sell-card/paper-sell-card.component.html</context>
-          <context context-type="linenumber">18</context>
-        </context-group>
-        <note priority="1" from="description">Gain</note>
       </trans-unit>
       <trans-unit id="amountavailable" datatype="html">
         <source>Amount available:</source>
@@ -1067,6 +1179,26 @@
         </context-group>
         <note priority="1" from="description">Execute</note>
       </trans-unit>
+      <trans-unit id="priceOfBuy" datatype="html">
+        <source>Price(Of buy)</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/learning/paper-buy-card/paper-buy-card.component.html</context>
+          <context context-type="linenumber">16</context>
+        </context-group>
+        <note priority="1" from="description">Price of buy</note>
+      </trans-unit>
+      <trans-unit id="delete" datatype="html">
+        <source>Delete</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/learning/paper-buy-edit/paper-buy-edit.component.html</context>
+          <context context-type="linenumber">18</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/learning/paper-sell-edit/paper-sell-edit.component.html</context>
+          <context context-type="linenumber">24</context>
+        </context-group>
+        <note priority="1" from="description">Delete</note>
+      </trans-unit>
       <trans-unit id="Amount" datatype="html">
         <source>Amount:</source>
         <context-group purpose="location">
@@ -1090,6 +1222,30 @@
           <context context-type="linenumber">19</context>
         </context-group>
         <note priority="1" from="description">Percent</note>
+      </trans-unit>
+      <trans-unit id="paperSell" datatype="html">
+        <source> Paper Sale </source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/learning/paper-quick-sell/paper-quick-sell.component.html</context>
+          <context context-type="linenumber">3</context>
+        </context-group>
+        <note priority="1" from="description">Paper sale</note>
+      </trans-unit>
+      <trans-unit id="paperSellTip" datatype="html">
+        <source>Make a paper sell (A fake sell just for learning purposes)</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/learning/paper-quick-sell/paper-quick-sell.component.html</context>
+          <context context-type="linenumber">1</context>
+        </context-group>
+        <note priority="1" from="description">ppsell tip</note>
+      </trans-unit>
+      <trans-unit id="stopGain" datatype="html">
+        <source>Stop gain</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/learning/paper-sell-edit/paper-sell-edit.component.html</context>
+          <context context-type="linenumber">37</context>
+        </context-group>
+        <note priority="1" from="description">Stop gain</note>
       </trans-unit>
       <trans-unit id="shark" datatype="html">
         <source> Risk (shark) is:</source>
