--- a/todo/todos/todo.txt
+++ b/todo/todos/todo.txt
@@ -12,3 +12,4 @@ Alterar o label de register etc para criar ordem. Talvez retirar o auto execute 
 (Z) Refatorar os testes da api note:Euo.txt
 (E) Criar tela de se inscrever
 (H) Rever Interface note:9hU.txt
+erros note:2oo.txt
