--- a/src/locale/messages.pt.xlf
+++ b/src/locale/messages.pt.xlf
@@ -277,8 +277,8 @@
         <note priority="1" from="description">Code</note>
       </trans-unit>
       <trans-unit id="price" datatype="html">
-        <source>Price: </source>
-        <target>Preço: </target>
+        <source>Price</source>
+        <target>Preço</target>
         <context-group purpose="location">
           <context context-type="sourcefile">app/stock/add-stock/add-stock.component.html</context>
           <context context-type="linenumber">19</context>
@@ -433,8 +433,8 @@
         <note priority="1" from="description">Experiment</note>
       </trans-unit>
       <trans-unit id="amount" datatype="html">
-        <source>*Amount: </source>
-        <target>*Quantidade: </target>
+        <source>Amount</source>
+        <target>Quantidade</target>
         <context-group purpose="location">
           <context context-type="sourcefile">app/operation/experience/experience.component.html</context>
           <context context-type="linenumber">10</context>
@@ -486,8 +486,8 @@
         <note priority="1" from="description">Amount</note>
       </trans-unit>
       <trans-unit id="nickname" datatype="html">
-        <source>Nickname: </source>
-        <target>Apelido: </target>
+        <source>Nickname</source>
+        <target>Apelido</target>
         <context-group purpose="location">
           <context context-type="sourcefile">app/operation/experience/experience.component.html</context>
           <context context-type="linenumber">20</context>
@@ -958,6 +958,15 @@
         </context-group>
         <note priority="1" from="description">Project Sale</note>
       </trans-unit>
+      <trans-unit id="projectSaleTitle" datatype="html">
+        <source>Project a sell. To execute it click on execute button.</source>
+        <target>Projetar venda. Para executar a venda clique em executar na tela de vendas.</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/operation/quick-sell/quick-sell.component.html</context>
+          <context context-type="linenumber">1</context>
+        </context-group>
+        <note priority="1" from="description">Project Sale title</note>
+      </trans-unit>
       <trans-unit id="archive" datatype="html">
         <source>Archive</source>
         <target>Arquivar</target>
@@ -977,8 +986,8 @@
         <note priority="1" from="description">by</note>
       </trans-unit>
       <trans-unit id="stopLoss" datatype="html">
-        <source>Stop Loss: R$</source>
-        <target>Stop Loss: R$</target>
+        <source>Stop Loss</source>
+        <target>Stop Loss</target>
         <context-group purpose="location">
           <context context-type="sourcefile">app/operation/experience-card/experience-card.component.html</context>
           <context context-type="linenumber">30</context>
@@ -986,6 +995,18 @@
         <context-group purpose="location">
           <context context-type="sourcefile">app/operation/experience-card/experience-card.component.html</context>
           <context context-type="linenumber">40</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/operation/experience-edit/experience-edit.component.html</context>
+          <context context-type="linenumber">45</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/operation/sell-card/sell-card.component.html</context>
+          <context context-type="linenumber">27</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/operation/sell-edit/sell-edit.component.html</context>
+          <context context-type="linenumber">46</context>
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/learning/paper-sell-edit/paper-sell-edit.component.html</context>
@@ -1052,8 +1073,8 @@
         <note priority="1" from="description">StockProfit</note>
       </trans-unit>
       <trans-unit id="limit" datatype="html">
-        <source>Limit: </source>
-        <target>Limite: </target>
+        <source>Limit</source>
+        <target>Limite</target>
         <context-group purpose="location">
           <context context-type="sourcefile">app/operation/experience-edit/experience-edit.component.html</context>
           <context context-type="linenumber">20</context>
@@ -1086,8 +1107,8 @@
         <note priority="1" from="description">Edit</note>
       </trans-unit>
       <trans-unit id="stopgain" datatype="html">
-        <source>Stop Gain: </source>
-        <target>Stop Gain: </target>
+        <source>Stop Gain</source>
+        <target>Stop Gain</target>
         <context-group purpose="location">
           <context context-type="sourcefile">app/operation/experience-edit/experience-edit.component.html</context>
           <context context-type="linenumber">41</context>
@@ -1102,26 +1123,9 @@
         </context-group>
         <note priority="1" from="description">Stop Gain</note>
       </trans-unit>
-      <trans-unit id="stoploss" datatype="html">
-        <source>Stop Loss: </source>
-        <target>Stop Loss: </target>
-        <context-group purpose="location">
-          <context context-type="sourcefile">app/operation/experience-edit/experience-edit.component.html</context>
-          <context context-type="linenumber">45</context>
-        </context-group>
-        <context-group purpose="location">
-          <context context-type="sourcefile">app/operation/sell-card/sell-card.component.html</context>
-          <context context-type="linenumber">27</context>
-        </context-group>
-        <context-group purpose="location">
-          <context context-type="sourcefile">app/operation/sell-edit/sell-edit.component.html</context>
-          <context context-type="linenumber">46</context>
-        </context-group>
-        <note priority="1" from="description">Stop Loss</note>
-      </trans-unit>
       <trans-unit id="action" datatype="html">
-        <source>Action: </source>
-        <target>Ação: </target>
+        <source>Action</source>
+        <target>Ação</target>
         <context-group purpose="location">
           <context context-type="sourcefile">app/operation/experience-edit/experience-edit.component.html</context>
           <context context-type="linenumber">50</context>
@@ -1151,8 +1155,8 @@
         <note priority="1" from="description">Price Of Buy</note>
       </trans-unit>
       <trans-unit id="stockValue" datatype="html">
-        <source>Stock value:</source>
-        <target>Valor da ação:</target>
+        <source>Stock value</source>
+        <target>Valor da ação</target>
         <context-group purpose="location">
           <context context-type="sourcefile">app/operation/buy-card/buy-card.component.html</context>
           <context context-type="linenumber">31</context>
@@ -1267,8 +1271,8 @@
         <note priority="1" from="description">Equity Impact</note>
       </trans-unit>
       <trans-unit id="category" datatype="html">
-        <source>Category: </source>
-        <target>Categoria: </target>
+        <source>Category</source>
+        <target>Categoria</target>
         <context-group purpose="location">
           <context context-type="sourcefile">app/operation/sell-edit/sell-edit.component.html</context>
           <context context-type="linenumber">20</context>
