--- a/todo/todos/todo.txt
+++ b/todo/todos/todo.txt
@@ -11,3 +11,4 @@ Alterar o label de register etc para criar ordem. Talvez retirar o auto execute 
 (Z) Criar tela de se inscrever
 (H) Rever Interface note:9hU.txt
 erros note:2oo.txt
+(A) Ver pq nao esta ordenando as acoes...
