--- a/todo/todos/todo.txt
+++ b/todo/todos/todo.txt
@@ -11,6 +11,6 @@ Alterar o label de register etc para criar ordem. Talvez retirar o auto execute 
 (Z) Criar tela de se inscrever
 (H) Rever Interface note:9hU.txt
 erros note:2oo.txt
-(A) Colocar um campo para uma previsão da ação, quanto tempo eu espero que ela chegue no valor esperado
 (F) Melhorias no stock note:CCq.txt
 (D) Criar um cli
+(E) Consertar bug da atualizacao em outra pagina
