--- a/todo/todos/todo.txt
+++ b/todo/todos/todo.txt
@@ -10,8 +10,5 @@ Alterar o label de register etc para criar ordem. Talvez retirar o auto execute 
 (Z) Refatorar os testes da api note:Euo.txt
 (Z) Criar tela de se inscrever
 (H) Rever Interface note:9hU.txt
-erros note:2oo.txt
 (F) Melhorias no stock note:CCq.txt
-(D) Criar um cli
-(E) Consertar bug da atualizacao em outra pagina
-(A) Fazer o ranking note:e6v.txt
+(Z) Criar um cli
